@@ -1,6 +1,7 @@
 package com.backoffice.operations.service.impl;
 
 import com.backoffice.operations.entity.*;
+import com.backoffice.operations.enums.JointTypeEnum;
 import com.backoffice.operations.payloads.*;
 import com.backoffice.operations.payloads.common.GenericResponseDTO;
 import com.backoffice.operations.repository.*;
@@ -18,6 +19,7 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Service
@@ -63,7 +65,9 @@ public class DashboardServiceImpl implements DashboardService {
 
     private static final String creditCard = "card";
 
-    public DashboardServiceImpl(RestTemplate restTemplate, CivilIdRepository civilIdRepository, DashboardRepository dashboardRepository, DashboardInfoRepository dashboardInfoRepository, AccountTransactionsEntityRepository accountTransactionsEntityRepository, CardTransactionsEntityRepository cardTransactionsEntityRepository, AccountTypeRepository accountTypeRepository) {
+    private final ProfileRepository profileRepository;
+
+    public DashboardServiceImpl(RestTemplate restTemplate, CivilIdRepository civilIdRepository, DashboardRepository dashboardRepository, DashboardInfoRepository dashboardInfoRepository, AccountTransactionsEntityRepository accountTransactionsEntityRepository, CardTransactionsEntityRepository cardTransactionsEntityRepository, AccountTypeRepository accountTypeRepository, ProfileRepository profileRepository) {
         this.restTemplate = restTemplate;
         this.civilIdRepository = civilIdRepository;
         this.dashboardRepository = dashboardRepository;
@@ -71,6 +75,7 @@ public class DashboardServiceImpl implements DashboardService {
         this.accountTransactionsEntityRepository = accountTransactionsEntityRepository;
         this.cardTransactionsEntityRepository = cardTransactionsEntityRepository;
         this.accountTypeRepository = accountTypeRepository;
+        this.profileRepository = profileRepository;
     }
 
     @Override
@@ -78,20 +83,84 @@ public class DashboardServiceImpl implements DashboardService {
         return civilIdRepository.findById(uniqueKey)
                 .flatMap(civilIdEntity -> getTokenAndApiResponse(civilIdEntity.getCivilId()))
                 .map(apiResponse -> {
+
+                    Optional<Profile> profileOptional = profileRepository.findByUniqueKeyCivilId(uniqueKey);
+                    Profile profile = profileOptional.orElse(null);
+                    String custFullName = Objects.nonNull(profile) ? profile.getFullName() : "";
+
                     List<AccountsDetailsResponseDTO> accountsDetailsResponseDTOList = apiResponse.getResponse().getPayload().getCustSummaryDetails().getIslamicAccounts().stream()
                             .map(islamicAccount -> {
                                 AccountType accountType = getAccountDescription(islamicAccount.getAccls());
                                 String accountCodeDesc = Objects.nonNull(accountType) && Objects.nonNull(accountType.getDescription()) ? accountType.getDescription() : "";
                                 String accNickName = Objects.nonNull(accountType) && Objects.nonNull(accountType.getAccountNickName()) ? accountType.getAccountNickName() : "";
+                                DashboardEntity dashboard = dashboardRepository.findByAccountNumberAndUniqueKey(islamicAccount.getAcc(),uniqueKey);
+
                                 DashboardEntity dashboardEntity = DashboardEntity.builder()
-                                        .id(uniqueKey)
+                                        .uniqueKey(uniqueKey)
                                         .accountNumber(islamicAccount.getAcc())
                                         .availableBalance(islamicAccount.getAcyavlbal())
                                         .currency(islamicAccount.getCcy())
                                         .accountCodeDesc(accountCodeDesc)
                                         .accountType(islamicAccount.getAcctype())
                                         .accountNickName(accNickName)
+                                        .isAccountVisible(!Objects.nonNull(dashboard) || dashboard.isAccountVisible()).currentAccountBalance(islamicAccount.getCurrbal())
+                                        .branchName(islamicAccount.getBrn()).blockedAmount(islamicAccount.getAcyblkamt())
+                                        .customerName(custFullName).isAlertOnLowBal(!Objects.nonNull(dashboard) || dashboard.isAlertOnLowBal())
+                                        .isAlertOnTrnx(!Objects.nonNull(dashboard) || dashboard.isAlertOnTrnx())
+                                        .jointType(JointTypeEnum.getValueByCode(islamicAccount.getAcctype()))
+                                        .lowBalLimit(Objects.nonNull(dashboard) ? dashboard.getLowBalLimit() : 0)
+                                        .openDate(islamicAccount.getStatsince()).shariaContract("")
+                                        .customerNickName(Objects.nonNull(dashboard) ? dashboard.getCustomerNickName() : "")
                                         .build();
+                                if(Objects.nonNull(dashboard)){
+                                    dashboardEntity.setId(dashboard.getId());
+                                }
+                                dashboardEntity = dashboardRepository.save(dashboardEntity);
+                                return AccountsDetailsResponseDTO.builder()
+                                        .accountBalance(Objects.nonNull(dashboardEntity.getAvailableBalance()) ? dashboardEntity.getAvailableBalance() : 0.0)
+                                        .accountNumber(Objects.nonNull(dashboardEntity.getAccountNumber()) ? dashboardEntity.getAccountNumber() : "")
+                                        .accountType(Objects.nonNull(dashboardEntity.getAccountType()) ? dashboardEntity.getAccountType() : "")
+                                        .accountCodeDesc(Objects.nonNull(dashboardEntity.getAccountCodeDesc()) ? dashboardEntity.getAccountCodeDesc(): "")
+                                        .currency(Objects.nonNull(dashboardEntity.getCurrency()) ? dashboardEntity.getCurrency() : "")
+                                        .isAccountVisible(dashboardEntity.isAccountVisible()).currentAccountBalance(dashboardEntity.getCurrentAccountBalance())
+                                        .branchName(dashboardEntity.getBranchName()).blockedAmount(dashboardEntity.getBlockedAmount())
+                                        .customerName(custFullName).isAlertOnLowBal(dashboardEntity.isAlertOnLowBal())
+                                        .isAlertOnTrnx(dashboardEntity.isAlertOnTrnx()).jointType(dashboardEntity.getJointType())
+                                        .lowBalLimit(dashboardEntity.getLowBalLimit()).openDate(dashboardEntity.getOpenDate()).shariaContract("")
+                                        .customerNickName(dashboardEntity.getCustomerNickName())
+                                        .type(account)
+                                        .accountNickName(Objects.nonNull(dashboardEntity.getAccountNickName()) ? dashboardEntity.getAccountNickName() : "").build();
+                            })
+                            .collect(Collectors.toList());
+
+                    List<AccountsDetailsResponseDTO> accountsDetailsResponse = apiResponse.getResponse().getPayload().getCustSummaryDetails().getIstddetails().stream()
+                            .map(istdDetails -> {
+                                AccountType accountType = getAccountDescription(istdDetails.getAccclass());
+                                String accountCodeDesc = Objects.nonNull(accountType) && Objects.nonNull(accountType.getDescription()) ? accountType.getDescription() : "";
+                                String accNickName = Objects.nonNull(accountType) && Objects.nonNull(accountType.getAccountNickName()) ? accountType.getAccountNickName() : "";
+
+                                DashboardEntity dashboard = dashboardRepository.findByAccountNumberAndUniqueKey(istdDetails.getCustacno(),uniqueKey);
+
+                                DashboardEntity dashboardEntity = DashboardEntity.builder()
+                                        .uniqueKey(uniqueKey)
+                                        .accountNumber(istdDetails.getCustacno())
+                                        .availableBalance(istdDetails.getTdamt())
+                                        .currency(istdDetails.getCcy())
+                                        .accountCodeDesc(accountCodeDesc)
+                                        .accountType(istdDetails.getAcctype())
+                                        .accountNickName(accNickName)
+                                        .isAccountVisible(!Objects.nonNull(dashboard) || dashboard.isAccountVisible()).currentAccountBalance(istdDetails.getTdamt())
+                                        .branchName(istdDetails.getBranch()).blockedAmount(0)
+                                        .customerName(custFullName).isAlertOnLowBal(!Objects.nonNull(dashboard) || dashboard.isAlertOnLowBal())
+                                        .isAlertOnTrnx(!Objects.nonNull(dashboard) || dashboard.isAlertOnTrnx())
+                                        .jointType(JointTypeEnum.getValueByCode(istdDetails.getAcctype()))
+                                        .lowBalLimit(Objects.nonNull(dashboard) ? dashboard.getLowBalLimit() : 0)
+                                        .openDate(istdDetails.getStatsince()).shariaContract("")
+                                        .customerNickName(Objects.nonNull(dashboard) ? dashboard.getCustomerNickName() : "")
+                                        .build();
+                                if(Objects.nonNull(dashboard)){
+                                    dashboardEntity.setId(dashboard.getId());
+                                }
                                 dashboardRepository.save(dashboardEntity);
                                 return AccountsDetailsResponseDTO.builder()
                                         .accountBalance(Objects.nonNull(dashboardEntity.getAvailableBalance()) ? dashboardEntity.getAvailableBalance() : 0.0)
@@ -100,9 +169,18 @@ public class DashboardServiceImpl implements DashboardService {
                                         .accountCodeDesc(Objects.nonNull(dashboardEntity.getAccountCodeDesc()) ? dashboardEntity.getAccountCodeDesc(): "")
                                         .currency(Objects.nonNull(dashboardEntity.getCurrency()) ? dashboardEntity.getCurrency() : "")
                                         .type(account)
+                                        .isAccountVisible(dashboardEntity.isAccountVisible()).currentAccountBalance(dashboardEntity.getCurrentAccountBalance())
+                                        .branchName(dashboardEntity.getBranchName()).blockedAmount(dashboardEntity.getBlockedAmount())
+                                        .customerName(custFullName).isAlertOnLowBal(dashboardEntity.isAlertOnLowBal())
+                                        .isAlertOnTrnx(dashboardEntity.isAlertOnTrnx()).jointType(dashboardEntity.getJointType())
+                                        .lowBalLimit(dashboardEntity.getLowBalLimit()).openDate(dashboardEntity.getOpenDate()).shariaContract("")
+                                        .customerNickName(dashboardEntity.getCustomerNickName())
+                                        .type(account)
                                         .accountNickName(Objects.nonNull(dashboardEntity.getAccountNickName()) ? dashboardEntity.getAccountNickName() : "").build();
                             })
-                            .collect(Collectors.toList());
+                            .toList();
+
+                    accountsDetailsResponseDTOList.addAll(accountsDetailsResponse);
 
                     GenericResponseDTO<Object> responseDTO = new GenericResponseDTO<>();
                     Map<String, Object> data = new HashMap<>();
@@ -249,6 +327,39 @@ public class DashboardServiceImpl implements DashboardService {
             List<ExternalApiTransactionResponseDTO.Response.Transaction> transactionList = accountsTransactionResponseEntity.getBody().getResponse().getTransactions();
             AccountTransactionResponseDTO accountTransactionResponseDTOS = new AccountTransactionResponseDTO();
             List<AccountTransactionResponseDTO.AccountTransaction> accountTransactionsEntities = new ArrayList<>();
+
+            String actualFirstFourDigits = accountNumber.substring(0, 4);
+            String actualLastFourDigits = accountNumber.substring(accountNumber.length() - 4);
+            String creditCardNumber = actualFirstFourDigits + "********" + actualLastFourDigits;
+
+            String receiverCifNo = accountNumber.substring(3, 10);
+            Optional<AccountDetails.Response.Payload.CustSummaryDetails.IslamicAccount> islamicAccountOptional = getTokenAndApiResponse(receiverCifNo)
+                    .map(AccountDetails::getResponse)
+                    .map(AccountDetails.Response::getPayload)
+                    .map(AccountDetails.Response.Payload::getCustSummaryDetails)
+                    .map(AccountDetails.Response.Payload.CustSummaryDetails::getIslamicAccounts)
+                    .orElseGet(Collections::emptyList)
+                    .stream()
+                    .filter(acc -> acc.getAcc().equals(accountNumber))
+                    .findFirst();
+
+            Optional<AccountDetails.Response.Payload.CustSummaryDetails.Istddetails> istddetailsOptional = islamicAccountOptional
+                    .filter(islamicAccount -> islamicAccount != null)
+                    .map(unused -> getTokenAndApiResponse(receiverCifNo)
+                            .map(AccountDetails::getResponse)
+                            .map(AccountDetails.Response::getPayload)
+                            .map(AccountDetails.Response.Payload::getCustSummaryDetails)
+                            .map(AccountDetails.Response.Payload.CustSummaryDetails::getIstddetails)
+                            .orElseGet(Collections::emptyList)
+                            .stream()
+                            .filter(acc -> acc.getCustacno().equals(accountNumber))
+                            .findFirst()
+                            .orElse(null) // Extract the value from the Optional
+                    );
+
+            AccountDetails.Response.Payload.CustSummaryDetails.IslamicAccount islamicAccount = islamicAccountOptional.orElse(null);
+            AccountDetails.Response.Payload.CustSummaryDetails.Istddetails istddetailsAccount = istddetailsOptional.orElse(null);
+
             transactionList.forEach(txn -> {
                 String indicator = txn.getIndicator();
                 String desc = txn.getTransactionDesc();
@@ -262,7 +373,8 @@ public class DashboardServiceImpl implements DashboardService {
 
                 AccountTransactionResponseDTO.AccountTransaction transactionResponseDTO = AccountTransactionResponseDTO.AccountTransaction.builder()
                         .indicator(indicator).transactionAmount(amount).transactionDescription(desc).transactionDate(localDate)
-                        .referenceNumber(referenceNo).build();
+                        .transactionFrom(creditCardNumber).availableBalance(Objects.nonNull(islamicAccount) ? islamicAccount.getAcyavlbal() : Objects.nonNull(istddetailsAccount) ? istddetailsAccount.getTdamt() : 0.0)
+                        .referenceNumber(referenceNo).transactionTo("").build();
                 accountTransactionsEntities.add(transactionResponseDTO);
                 accountTransactionsEntityList.add(accountTransactionsEntity);
             });
@@ -303,8 +415,22 @@ public class DashboardServiceImpl implements DashboardService {
             headers.setContentType(MediaType.APPLICATION_JSON);
             headers.add("TENANT", "ALIZZ_UAT");
             String apiUrl = externalCardTransactionApiUrl + "?pageNo=0&pageSize=999&txnCategory=spend";
-            String requestBody = "{ \"entityId\": \"" + civilIdEntity.get().getCivilId() + "\" }";
-            HttpEntity<String> requestEntity = new HttpEntity<>(requestBody, headers);
+            StringBuilder requestBody = new StringBuilder();
+            if (Objects.isNull(fromDate) && Objects.isNull(toDate)) {
+                requestBody.append("{\n" + "\"entityId\": \"").append(civilIdEntity.get().getCivilId()).append("\"\n" + " }");
+            } else if (Objects.isNull(fromDate)) {
+                requestBody.append("{\n" + "\"entityId\": \"").append(civilIdEntity.get().getCivilId())
+                        .append("\",\n" + "\"toDate\":\"").append(toDate).append("\"\n" + " }");
+            } else if (Objects.isNull(toDate)) {
+                requestBody.append("{\n" + "\"entityId\": \"").append(civilIdEntity.get().getCivilId())
+                        .append("\",\n" + "\"fromDate\":\"").append(fromDate).append("\"\n" + " }");
+            }else {
+                requestBody.append("{\n" + "\"entityId\": \"").append(civilIdEntity.get().getCivilId())
+                        .append("\",\n" + "\"fromDate\":\"").append(fromDate)
+                        .append("\",\n" + "\"toDate\":\"").append(toDate).append("\"\n" + " }");
+            }
+
+            HttpEntity<String> requestEntity = new HttpEntity<>(requestBody.toString(), headers);
             ResponseEntity<ExternalApiCardTransactionResponseDTO> cardTransactionResponseEntity = restTemplate.exchange(apiUrl,
                     HttpMethod.POST, requestEntity, ExternalApiCardTransactionResponseDTO.class);
             if (Objects.nonNull(cardTransactionResponseEntity.getBody()) && Objects.nonNull(cardTransactionResponseEntity.getBody().getResult())
@@ -369,6 +495,99 @@ public class DashboardServiceImpl implements DashboardService {
             responseDTO.setData(data);
             return responseDTO;
         }
+    }
+
+    @Override
+    public GenericResponseDTO<Object> getUpComingBills(String uniqueKey) {
+        return civilIdRepository.findById(uniqueKey)
+                .flatMap(civilIdEntity -> getTokenAndApiResponse(civilIdEntity.getCivilId()))
+                .map(apiResponse -> {
+                    UpcomingBillsResponseDto upcomingBillsResponseDtos = new UpcomingBillsResponseDto();
+                    AtomicReference<Double> totalAmt = new AtomicReference<>((double) 0);
+                    List<UpcomingBillsResponseDto.Events> eventsList = apiResponse.getResponse().getPayload().getCustSummaryDetails().getUpcomingEvents().stream()
+                            .map(upcomingEvents -> {
+                                totalAmt.updateAndGet(currentTotal -> currentTotal + upcomingEvents.getAmount());
+                                 return UpcomingBillsResponseDto.Events.builder().event(upcomingEvents.getEvent())
+                                        .amount(upcomingEvents.getAmount()).dueOn(upcomingEvents.getEventdt())
+                                        .currency(upcomingEvents.getCcy()).build();
+
+                            })
+                            .toList();
+
+                    upcomingBillsResponseDtos.setEventsList(eventsList);
+                    upcomingBillsResponseDtos.setTotalAmt(totalAmt.get());
+                    GenericResponseDTO<Object> responseDTO = new GenericResponseDTO<>();
+                    Map<String, Object> data = new HashMap<>();
+                    data.put("uniqueKey", uniqueKey);
+                    data.put("upcomingEventsDetails", upcomingBillsResponseDtos);
+                    responseDTO.setStatus("Success");
+                    responseDTO.setMessage("Success");
+                    responseDTO.setData(data);
+                    return responseDTO;
+                })
+                .orElseGet(() -> createFailureResponse(uniqueKey));
+
+    }
+
+    @Override
+    public GenericResponseDTO<Object> editInfo(EditInfoRequestDto editInfoRequestDto) {
+        DashboardEntity dashboardEntity =dashboardRepository.findByAccountNumberAndUniqueKey(editInfoRequestDto.getAccountNumber(), editInfoRequestDto.getUniqueKey());
+        if(Objects.nonNull(dashboardEntity)){
+            dashboardEntity.setId(dashboardEntity.getId());
+            dashboardEntity.setAccountVisible(editInfoRequestDto.getIsAccountVisible());
+            dashboardEntity.setAlertOnLowBal(editInfoRequestDto.getIsAlertOnLowBal());
+            dashboardEntity.setAlertOnTrnx(editInfoRequestDto.getIsAlertOnTrnx());
+            dashboardEntity.setCustomerNickName(Objects.nonNull(editInfoRequestDto.getCustomerNickName()) ? editInfoRequestDto.getCustomerNickName() : "");
+            dashboardEntity.setLowBalLimit(editInfoRequestDto.getLowBalLimit());
+            dashboardRepository.save(dashboardEntity);
+            GenericResponseDTO<Object> responseDTO = new GenericResponseDTO<>();
+            Map<String, Object> data = new HashMap<>();
+            data.put("accountNumber",editInfoRequestDto.getAccountNumber());
+            data.put("uniqueKey", editInfoRequestDto.getUniqueKey());
+            responseDTO.setStatus("Success");
+            responseDTO.setMessage("Success");
+            responseDTO.setData(data);
+            return responseDTO;
+
+        }
+        GenericResponseDTO<Object> responseDTO = new GenericResponseDTO<>();
+        Map<String, Object> data = new HashMap<>();
+        data.put("accountNumber",editInfoRequestDto.getAccountNumber());
+        data.put("uniqueKey", editInfoRequestDto.getUniqueKey());
+        data.put("message", "Account Not Found");
+        responseDTO.setStatus("failure");
+        responseDTO.setMessage("failure");
+        responseDTO.setData(data);
+        return responseDTO;
+    }
+
+    @Override
+    public GenericResponseDTO<Object> getBlockedAmounts(String uniqueKey, String accountNumber) {
+
+        return civilIdRepository.findById(uniqueKey)
+                .flatMap(civilIdEntity -> getTokenAndApiResponse(civilIdEntity.getCivilId()))
+                .map(apiResponse -> {
+                    List<AccountDetails.Response.Payload.CustSummaryDetails.AmountBlocks> amountBlocks = apiResponse.getResponse().getPayload().getCustSummaryDetails().getAmountBlocks();
+                    List<BlockedAmountResponseDto> blockedAmountList = amountBlocks.stream()
+                            .filter(blkAmt -> blkAmt.getAccount().equals(accountNumber))
+                            .map(amtBlock -> BlockedAmountResponseDto.builder()
+                                    .amount(amtBlock.getAmount()).account(amtBlock.getAccount()).blktype(amtBlock.getBlktype())
+                                    .branch(amtBlock.getBranch()).effdate(amtBlock.getEffdate())
+                                    .amtblkno(amtBlock.getAmtblkno()).expdate(amtBlock.getExpdate())
+                                    .build())
+                            .toList();
+
+                    GenericResponseDTO<Object> responseDTO = new GenericResponseDTO<>();
+                    Map<String, Object> data = new HashMap<>();
+                    data.put("uniqueKey", uniqueKey);
+                    data.put("blockedAmounts", blockedAmountList);
+                    responseDTO.setStatus("Success");
+                    responseDTO.setMessage("Success");
+                    responseDTO.setData(data);
+                    return responseDTO;
+
+                })
+                .orElseGet(() -> createFailureResponse(uniqueKey));
     }
 
     private static GenericResponseDTO<Object> getErrorResponseObject(String uniqueKey) {
